--- a/cv.css
+++ b/cv.css
@@ -219,11 +219,13 @@ text-transform: uppercase;
     width: calc(100%/3);
     padding-right: 10px;
     padding-top: 2px;
+    flex-grow: 1;
 }
 
 .main-content-item div.mc-item-description{
-    width: calc(100% - 100%3);
+    width: calc(100% - 100%/3);
     display: flex;
+    flex-grow: 2;
 }
 
 .mc-item-description p{
