--- a/cv.css
+++ b/cv.css
@@ -17,6 +17,13 @@ html{
     background-color: #efeff0;
 }
 
+body{
+    margin: auto;
+    max-width: 1200px;
+    /* border: 0.1px solid #c2c8d1; */
+    box-shadow: 0px 0px 15px #c2c8d1 ;
+}
+
 header{
     background-color: var(--header-background-color);
     /* background-color: #252e3e; */
@@ -31,6 +38,7 @@ header{
     padding: 0px 2px 10px 2px;
     vertical-align: top;
     font-weight: 900;
+    text-shadow: 0px 0px 10px black;
 }
 
 
@@ -47,6 +55,7 @@ h1{
     font-size: 2.5rem;
     text-align: center;
     letter-spacing: 10px ;
+    text-shadow: 0px 0px 2px var(--main-title-color);
    
 }
 section.main-title{
@@ -66,6 +75,7 @@ section.main-title div h4{
 letter-spacing: 2px;
 font-weight: 900;
 color: var(--main-title-color);
+text-shadow: 0px 0px 10px black;
 }
 .main-title .vertical-line div{
     width: 100%;
@@ -90,11 +100,13 @@ section.contactInfo div{
 section.contactInfo div p{
 color:#fff;
 line-height: 1.6rem;
+text-shadow: 0px 0px 10px black;
 }
     
 section.contactInfo div p i{
     font-size: 1.5rem;
     color: var(--main--icons--color);
+    text-shadow: 0px 0px 5px black;
 }
 
 .contactInfo div p {
@@ -142,6 +154,8 @@ div#personal-image img{
     height: 200px;
     width: 200px;
     border-radius: 50%;
+    box-shadow: 0px 0px 5px black;
+
 }
 
 .main .main-content{
@@ -296,15 +310,16 @@ display: inline-block;
 }
 
 footer{
-    height: 100px;
+    height: 50px;
     text-align: center;
     background-color: var(--header-background-color);
 }
 
 footer p{
     position: relative;
-    top: 70%;
+    top: 60%;
     color: var(--main--icons--color);
+    text-shadow: 0px 0px 10px black;
 
 }
 
@@ -344,6 +359,9 @@ footer p{
     }
 }
 
+.main p{
+    line-height: 1.5rem;
+}
 @media only screen and (max-width:780px){
 .main{
     flex-direction: column;
