--- a/cv.css
+++ b/cv.css
@@ -11,6 +11,7 @@
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
+    overflow-wrap:break-word ;
 }
 
 html{
@@ -223,6 +224,9 @@ font-weight: 900;
 margin:20px 0;
 text-transform: uppercase;
 }
+.main p{
+    line-height: 1.5rem;
+}
 
 .main-content-item{
     display: flex;
@@ -324,7 +328,7 @@ footer p{
 }
 
 
-@media only screen and (max-width:600px){
+@media only screen and (max-width:960px){
     header{
         width: 100%;
     }
@@ -359,9 +363,7 @@ footer p{
     }
 }
 
-.main p{
-    line-height: 1.5rem;
-}
+
 @media only screen and (max-width:780px){
 .main{
     flex-direction: column;
