--- a/cv.css
+++ b/cv.css
@@ -327,7 +327,18 @@ footer p{
 
 }
 
+#video{
+      display: none;
+      height: 200px;
+      width: 100%;
+    }
 
+    #myvideo{
+      display: block;
+      width: 100% ;
+      height: 200px;
+      object-fit: cover;
+    }
 @media only screen and (max-width:960px){
     header{
         width: 100%;
@@ -380,6 +391,11 @@ footer p{
 
 .main .main-content{
     width: 100%;
+}
+#video{
+        display: block;
+        width: 100%;
+        height: 200px;
 }
 }
 
