--- a/cv.css
+++ b/cv.css
@@ -317,6 +317,7 @@ footer{
     height: 50px;
     text-align: center;
     background-color: var(--header-background-color);
+    z-index:1;
 }
 
 footer p{
