--- a/cv.css
+++ b/cv.css
@@ -398,6 +398,9 @@ footer p{
         width: 100%;
         height: 200px;
 }
+.hidden{
+    display: none;
+}
 }
 
 @media screen and (-webkit-min-device-pixel-ratio:0) {
